--- a/homework_6a/styles.css
+++ b/homework_6a/styles.css
@@ -1,3 +1,4 @@
+/*------------HOME PAGE------------*/
 .home { 
 	background-color:#FFFFFF;
 	width:1440px;
@@ -12,6 +13,7 @@
 	left:45px;
 	top:15px;
 }
+/*LOGO*/
 .bunbun img {
 	width:117px;
 	height:117px;
@@ -22,6 +24,7 @@
 	background-repeat:no-repeat;
 	background-size:cover;
 }
+/*LOGO TITLE*/
 .bunbun h2 {
 	color:#000000;
 	width:125px;
@@ -34,28 +37,33 @@
 	font-size:32px;
 	letter-spacing:2px;
 }
-ul {
-    list-style: none;
-}
+
+/*-----LINKS-----*/
 a {
     text-decoration: none;
 }
 a:visited {
     color: #000000;
 }
+
+/*-----NAV BAR-----*/
+ul {
+    list-style: none;
+}
+/*UNDER ORDER*/
 .nav_line {
     background-color:#FF9330;
 	width:87px;
 	height:6px;
 	position:absolute;
-	left:1032px;
+	left:1002px;
 	top:120px;
 }
 .about {
     position: absolute;
     width: 93px;
     height: 44px;
-    left: 836px;
+    left: 806px;
     top: 50px;
     font-family: Airbnb Cereal App;
     font-style: normal;
@@ -69,7 +77,7 @@ a:visited {
     position: absolute;
     width: 86px;
     height: 44px;
-    left: 979px;
+    left: 949px;
     top: 50px;
     font-family: Airbnb Cereal App;
     font-style: normal;
@@ -83,7 +91,7 @@ a:visited {
     position: absolute;
     width: 120px;
     height: 44px;
-    left: 1115px;
+    left: 1085px;
     top: 50px;
     font-family: Airbnb Cereal App;
     font-style: normal;
@@ -97,7 +105,7 @@ a:visited {
     position: absolute;
     width: 120px;
     height: 44px;
-    left: 1285px;
+    left: 1255px;
     top: 50px;
     font-family: Airbnb Cereal App;
     font-style: normal;
@@ -107,6 +115,8 @@ a:visited {
     letter-spacing: 0.02em;
     color: #000000;
 }
+
+/*-----HOME PAGE BODY-----*/
 .home_title { 
 	color: #000000;
 	width:370px;
@@ -131,6 +141,7 @@ a:visited {
 	text-align:left;
 	font-size:30px;
 }
+/*-----ORDER NOW BUTTON-----*/
 .order_button {
 	width:358px;
 	height:79px;
@@ -161,6 +172,7 @@ a:visited {
 	text-align:left;
 	font-size:35px;
 }
+/*PHOTO OF BUN ON HOME PAGE*/
 .bun_photo {
     width:518px;
 	height:363px;
@@ -171,6 +183,9 @@ a:visited {
 	background-repeat:no-repeat;
 	background-size:cover;
 }
+
+
+/*------------ORDER PAGE------------*/
 .products h2 {
     color:#000000;
 	width:144px;
@@ -182,6 +197,8 @@ a:visited {
 	text-align:left;
 	font-size:45px;
 }
+
+/*-----BOXES FOR ITEMS-----*/
 .box1 {
     background-color:#FFFFFF;
 	width:394px;
@@ -260,6 +277,8 @@ a:visited {
 	border-bottom-right-radius:10px;
     border:3px solid #808080;
 }
+
+/*TITLES FOR ITEMS*/
 .original, .blackberry, .walnut, .gluten_free, .pumpkin_spice, .caramel_pecan {
 	color:#000000;
 	width:250px;
@@ -271,6 +290,8 @@ a:visited {
 	text-align:left;
 	font-size:30px;
 }
+
+/*PRICE FOR ITEMS*/
 .price1, .price2, .price3, .price4, .price5, .price6 {
     width:36px;
 	height:39px;
@@ -281,6 +302,8 @@ a:visited {
 	text-align:left;
 	font-size:30px;
 }
+
+/*DESCRIPTION FOR ITEMS*/
 .description1, .description2, .description3, .description4, .description5, .description6 {
 	color:#000000;
 	width:314px;
@@ -292,6 +315,8 @@ a:visited {
 	text-align:left;
 	font-size:18px;
 }
+
+/*-----IMAGE FOR ITEMS-----*/
 .box1 img, .box2 img, .box3 img, .box4 img, .box5 img, .box6 img {
     width:243px;
 	height:194px;
@@ -352,6 +377,8 @@ a:visited {
 	background-repeat:no-repeat;
 	background-size:cover;
 }
+
+/*------------ORIGINAL BUN PAGE------------*/
 .original_bun h2 {
     color:#000000;
 	width:300px;
@@ -363,6 +390,7 @@ a:visited {
 	text-align:left;
 	font-size:50px;
 }
+/*ORIGINAL BUN PHOTO*/
 .original_bun img {
 	width:409px;
 	height:325px;
@@ -374,7 +402,7 @@ a:visited {
 	background-size:cover;
 }
 
-/*BACK BUTTON*/
+/*-----BACK BUTTON-----*/
 .back {
 	width:180px;
 	height:44px;
@@ -404,10 +432,10 @@ a:visited {
 	background-size:cover;
 }
 
-/* GLAZE */
+/*-----GLAZE-----*/
 #glaze {
-	position:absolute;
     background: #FFFFFF;
+    position: relative;
 }
 .glaze h2 {
 	color:#000000;
@@ -425,20 +453,20 @@ a:visited {
     position: relative;
     color: #000000;
     border: 1px solid #808080;
-    padding: 20px 25px;
+    padding: 20px 20px;
     border-radius: 10px;
     text-align: center;
     font-size:20px;
-    display: inline-flex;
     justify-content: space-between;
 }
 .glazing.active {
     background-color:#FFD6B0;
 }
 
-/* QUANTITY */
+/*-----QUANTITY-----*/
 #quantity {
     background: #FFFFFF;
+    position: relative;
 }
 .quantity h2 {
 	color:#000000;
@@ -462,8 +490,11 @@ a:visited {
     font-size: 20px;
     justify-content: space-between;
 }
+.item_quantity.active {
+    background-color:#FFD6B0;
+}
 
-/*INGREDIENTS INFO*/
+/*-----INGREDIENTS INFO-----*/
 .ingredients_title {
     color:#000000;
 	width:140px;
@@ -488,9 +519,9 @@ a:visited {
 	font-size:22px;
 }
 
-/*ADD TO CART BUTTON*/
+/*-----ADD TO CART BUTTON-----*/
 .add_to_cart_button {
-	background-color:#E0E0E0;
+	background-color:#FFD6B0;
 	width:184px;
 	height:68px;
 	position:absolute;
@@ -502,7 +533,7 @@ a:visited {
 	border-bottom-right-radius:10px;
 }
 .add_to_cart {
-	color:#9E9E9E;
+	color:#000000;
 	width:140px;
 	height:30px;
 	position:absolute;
@@ -511,4 +542,218 @@ a:visited {
 	font-family:Airbnb Cereal App;
 	text-align:center;
 	font-size:22px;  
+}
+
+/*------------SHOPPING CART PAGE------------*/
+.s_cart h2 {
+    color:#000000;
+	width:350px;
+	height:65px;
+	position:absolute;
+	left:96px;
+	top:190px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:45px;
+}
+.item_title {
+    color:#000000;
+	width:180px;
+	height:37px;
+	position:absolute;
+	left:338px;
+	top:354px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:30px;
+	letter-spacing:2;
+}
+.item_price {
+    color:#000000;
+	width:96px;
+	height:37px;
+	position:absolute;
+	left:726px;
+	top:354px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:30px;
+	letter-spacing:2;
+}
+.item_glaze {
+    color:#808080;
+	width:206px;
+	height:28px;
+	position:absolute;
+	left:338px;
+	top:401px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:25px;
+	letter-spacing:2;
+}
+.item_edit {
+    color:#FF9330;
+	width:43px;
+	height:29px;
+	position:absolute;
+	left:338px;
+	top:437px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:22px;
+	letter-spacing:2;
+    text-decoration: underline;
+}
+.original_bun_cart_box {
+    border:2px solid #808080;
+    width:200px;
+	height:165px;
+	position:absolute;
+	left:96px;
+	top:325px;
+	border-top-left-radius:10px;
+	border-top-right-radius:10px;
+	border-bottom-left-radius:10px;
+	border-bottom-right-radius:10px;
+}
+.original_bun_cart_box img {
+    width:171px;
+	height:136px;
+	position:absolute;
+	left:11px;
+	top:15px;
+	background-image:url(images/image_4.png);
+	background-repeat:no-repeat;
+	background-size:cover;
+}
+.edit_quantity {
+    border:2px solid #808080;
+    width:87px;
+	height:41px;
+	position:absolute;
+	left:733px;
+	top:423px;
+}
+.bun_quantity {
+    color:#000000;
+	width:17px;
+	height:39px;
+	position:absolute;
+	left:33px;
+	top:1px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:30px;
+}
+.subtract_quantity {
+    border:2px solid #808080;
+    width:41px;
+	height:41px;
+	position:absolute;
+	left:690px;
+	top:423px;
+}
+.subtract {
+    color:#000000;
+	width:12px;
+	height:39px;
+	position:absolute;
+	left:15px;
+	top:1px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:30px;
+}
+.add_quantity {
+    border:2px solid #808080;
+    width:41px;
+	height:41px;
+	position:absolute;
+	left:822px;
+	top:423px;
+}
+.add {
+    color:#000000;
+	width:18px;
+	height:39px;
+	position:absolute;
+	left:11px;
+	top:1px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:30px;
+}
+.delete {
+    width:40px;
+	height:40px;
+	position:absolute;
+	left:888px;
+	top:351px;
+	background-image:url(images/x.png);
+	background-repeat:no-repeat;
+	background-size:cover;
+}
+.subtotal_box {
+    border:2px solid #808080;
+    width:370px;
+	height:361px;
+	position:absolute;
+	left:1005px;
+	top:325px;
+}
+.subtotal_title {
+    color:#000000;
+	width:182px;
+	height:44px;
+	position:absolute;
+	left:94px;
+	top:29px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:25px;
+}
+.subtotal_price {
+    color:#000000;
+	width:132px;
+	height:44px;
+	position:absolute;
+	left:110px;
+	top:75px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:80px;
+    font-weight: 500;
+}
+.subtotal_go_back {
+    color:#FF9330;
+	width:206px;
+	height:29px;
+	position:absolute;
+	left:87px;
+	top:297px;
+	font-family:Airbnb Cereal App;
+	text-align:left;
+	font-size:22px;
+	text-decoration: underline;
+}
+.checkout_button {
+    background-color:#FFD6B0;
+	width:291px;
+	height:66px;
+	position:absolute;
+	left:1044px;
+	top:533px;
+}
+.check_out {
+    color:#000000;
+	width:136px;
+	height:30px;
+	position:absolute;
+	left:77px;
+	top:18px;
+	font-family:Airbnb Cereal App;
+	text-align:center;
+	font-size:25px;
+	letter-spacing:2;
 }
